# drag

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vcpkg.json
benchmarks/: CMakeLists.txt  cross.cpp  cyclify.cpp  helper.hpp  stats.cpp  stats.hpp
data/: generate_graph.sh  layout.sh
data/simple/: cyclic.gv  disconnected.gv  uniform_n20_e32_i1.gv
example/: CmakeLists.txt  README.md  draw.cpp  example.cpp  helper.hpp  main.cpp  parser.hpp  svg.hpp
example/draw/: CMakeLists.txt  draw.cpp  parser.hpp
example/simple/: CMakeLists.txt  example.cpp
include/: crossing.hpp  cycle.hpp  graph.hpp  layering.hpp  layout.hpp  positioning.hpp  router.hpp  subgraph.hpp  types.hpp  utils.hpp  vec2.hpp
include/drag/: drag.hpp  graph.hpp  layout.hpp  types.hpp  vec2.hpp
include/drag/detail/: algo.hpp  crossing.hpp  cycle.hpp  layering.hpp  positioning.hpp  report.hpp  router.hpp  subgraph.hpp  utils.hpp
include/drag/drawing/: draw.hpp  svg.hpp
src/: CMakeLists.txt  crossing.hpp  cycle.hpp  dot.cpp  example.cpp  graph.hpp  interface.hpp  layering.hpp  layout.hpp  parser.hpp  positioning.hpp  report.hpp  router.hpp  stuff.hpp  subgraph.hpp  svg.hpp  types.hpp  utils.hpp  vec2.hpp
src/benchmarks/: bench.cpp  draw.cpp  helper.hpp  stat.cpp
src/data/: disconnected.gv  tree.gv
src/example/: example.cpp
src/test/: test-cycle.cpp  test-graph.cpp  test-layering.cpp  test-subgraph.cpp  test-utils.hpp
stats/: cyclify.cpp  stats.cpp
test/: CMakeLists.txt  gen.sh  my-main.cpp  optimality.cpp  test-cycle.cpp  test-graph.cpp  test-layering.cpp  test-optimality.cpp  test-randomized.cpp  test-subgraph.cpp  test-utils.hpp
test/data/: uniform_n100_e1060_i0.gv  uniform_n100_e1060_i1.gv  uniform_n20_e132_i0.gv  uniform_n20_e132_i1.gv  uniform_n40_e304_i0.gv  uniform_n40_e304_i1.gv  uniform_n40_e344_i0.gv  uniform_n40_e344_i1.gv  uniform_n40_e384_i0.gv  uniform_n40_e384_i1.gv  uniform_n40_e424_i0.gv  uniform_n40_e424_i1.gv
test/utils/: bruteforce.cpp  bruteforce.hpp  gen.hpp  randomized.hpp  test-utils.hpp
utils/: convert.sh  generate.sh  layout.sh
